# super-platform

./: .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
apps/ai-service/: README.md  blog.db  config.py  database.py  main.py  project.json  pyproject.toml  requirements.txt  schemas.py
apps/ai-service/ai_service/: index.py
apps/ai-service/alembic/: env.py
apps/ai-service/alembic/versions/: 217830f3e90e_initial_schema.py  cb0497c40501_add_likes_to_posts.py
apps/ai-service/models/: __init__.py  models.py
apps/ai-service/routers/: posts.py  users.py
apps/ai-service/templates/: home.html
apps/ai-service/tests/: test_index.py
apps/api-nest/: project.json  tsconfig.app.json  webpack.config.js
apps/api-nest-e2e/: jest.config.cts  project.json
apps/api-nest/src/: main.ts
apps/api-nest/src/app/: app.controller.ts  app.service.ts
apps/super-platform/: project.json
apps/super-platform-e2e/: playwright.config.ts  project.json
apps/super-platform/src/: index.html
apps/super-platform/src/app/: app.spec.ts  app.ts  nx-welcome.ts
apps/web-angular/: project.json
apps/web-angular-e2e/: playwright.config.ts  project.json
apps/web-angular/src/: index.html  styles.css
apps/web-angular/src/app/: ai.service.ts  app.css  app.html  app.spec.ts  app.ts  nx-welcome.ts
