[tool.coverage.run]
branch = true
source = [ "ai_service" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/apps/ai-service/html' --cov-report xml:'../../coverage/apps/ai-service/coverage.xml' --junitxml='../../reports/apps/ai-service/unittests/junit.xml' --html='../../reports/apps/ai-service/unittests/html/index.html'"

[tool.poetry]
name = "ai_service"
version = "1.0.0"
description = "AI service for invoice risk analysis and fraud detection"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "ai_service"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.11"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
